# django-erd-maker

./: .gitignore  boundary-audit.md  e2e-test.md  layout-optimization-priorities.md  layout-routing.md  log.txt  package.json  plan.md  spec-kor.md  spec.md  tsconfig.json
analyzer/: Cargo.toml
analyzer/src/: main.rs
analyzer/src/cli/: mod.rs
analyzer/src/extract/: diagnostics.rs  expression_helpers.rs  field_extractor.rs  method_extractor.rs  mod.rs  model_catalog.rs  model_extractor.rs  module_context.rs
analyzer/src/layout_engine/: circular.rs  clustered.rs  graphviz.rs  hierarchical.rs  location_optimizer.rs  measurement.rs  mod.rs
analyzer/src/parser/: ast_adapter.rs  diagnostics.rs  mod.rs  python_module_parser.rs
analyzer/src/protocol/: analysis.rs  contract_version.rs  diagnostics.rs  graph.rs  hello.rs  layout.rs  mod.rs  model_identity.rs  webview.rs
analyzer/src/resolve/: graph_builder.rs  mod.rs  model_registry.rs
analyzer/src/routing/: anchor.rs  crossing_detector.rs  mod.rs  orthogonal_router.rs
layout-core/: Cargo.toml
layout-core/src/: lib.rs
layout-wasm/: Cargo.toml
layout-wasm/src/: lib.rs
native/ogdf-layout/: CMakeLists.txt
native/ogdf-layout/src/: geometry.h  io.cpp  io.h  main.cpp  types.h
resources/graphviz/: README.md
scripts/: benchmark-layouts.mjs  build-layout-wasm.mjs  build-ogdf-binary.mjs  stage-graphviz-runtime.mjs  verify-ogdf-binaries.mjs  verify-release-artifacts.mjs  vscode-uninstall.mjs
src/extension/: extension.ts
src/types/: globals.d.ts  node-runtime.d.ts  node.d.ts  vscode.d.ts
test/e2e/: README.md  (+2 more)
(+119 files in other folders)
